--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#fbcfe8" />
+  <meta name="description" content="김철수 ♥ 이영희의 결혼식에 초대합니다" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <!-- Open Graph 메타 태그 추가 -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://1004rudejrdl.github.io/wedding-invitation/" />
+  <meta property="og:title" content="김철수 ♥ 이영희의 결혼식에 초대합니다" />
+  <meta property="og:description" content="2025년 6월 15일 일요일 오후 1시, 행복한 웨딩홀" />
+  <meta property="og:image" content="https://1004rudejrdl.github.io/wedding-invitation/images/main.jpg" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- 카카오톡 공유 전용 -->
+  <meta property="og:image:width" content="800" />
+  <meta property="og:image:height" content="400" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <title>김철수 ♥ 이영희의 결혼식에 초대합니다</title>
+</head>
+<body>
+<noscript>JavaScript를 활성화해주세요.</noscript>
+<div id="root"></div>
+</body>
 </html>
