웨딩홀 문 열림 애니메이션 효과 추가

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#fbcfe8" />
-  <meta name="description" content="김철수 ♥ 이영희의 결혼식에 초대합니다" />
+  <meta name="description" content="김경덕 ♥ 김예준의 결혼식에 초대합니다" />
 
   <!-- Open Graph 메타 태그 추가 -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://1004rudejrdl.github.io/wedding-invitation/" />
-  <meta property="og:title" content="김철수 ♥ 이영희의 결혼식에 초대합니다" />
+  <meta property="og:title" content="김경덕 ♥ 김예준의 결혼식에 초대합니다" />
   <meta property="og:description" content="2025년 6월 15일 일요일 오후 1시, 행복한 웨딩홀" />
   <meta property="og:image" content="https://1004rudejrdl.github.io/wedding-invitation/images/main.jpg" />
 
@@ -18,7 +18,7 @@
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="400" />
 
-  <title>김철수 ♥ 이영희의 결혼식에 초대합니다</title>
+  <title>김경덕 ♥ 김예준의 결혼식에 초대합니다</title>
 </head>
 <body>
 <noscript>JavaScript를 활성화해주세요.</noscript>
